--- a/packages/portal-code/package.json
+++ b/packages/portal-code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yijian.portal",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "local": "vue-cli-service serve --mode local",
@@ -101,5 +101,7 @@
     "last 2 versions",
     "not dead"
   ],
-  "__npminstall_done": false
+  "__npminstall_done": false,
+  "main": "index.js",
+  "license": "MIT"
 }
